force-app/main/default/objects/Attachment_Detail__c/Attachment_Detail__c.object-meta.xml
<CustomObject>
    <label>Attachment Detail</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>IssueAttachmentId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>