force-app/main/default/objects/Attachment_Detail__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <description>Feed Outbound - Attachment</description>
    <formula>Name&amp;&quot;_&quot;&amp;&quot;E&quot;&amp; Issue__r.CaseNumber__c &amp;&quot;.&quot;&amp;File_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment Name</label>
    <type>Text</type>
</CustomField>