force-app/main/default/objects/Attachment_Detail__c/fields/DescriptionFeed__c.field-meta.xml
<CustomField>
    <fullName>DescriptionFeed__c</fullName>
    <description>Feed Only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description Feed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>