force-app/main/default/objects/Attachment_Detail__c/fields/FeedSend__c.field-meta.xml
<CustomField>
    <fullName>FeedSend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used by the attachment extraction process.  The process looks for a value of false and then will extract the attachment.</description>
    <label>FeedSend</label>
    <type>Checkbox</type>
</CustomField>