force-app/main/default/objects/Attachment_Detail__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Feed Outbound - Attachment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>