force-app/main/default/objects/Attachment_Detail__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <description>Feed Outbound - Attachment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>