force-app/main/default/objects/Attachment_Detail__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Attachment Details</relationshipLabel>
    <relationshipName>Attachment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>