force-app/main/default/objects/Attachment_Detail__c/fields/Issue_Sent__c.field-meta.xml
<CustomField>
    <fullName>Issue_Sent__c</fullName>
    <formula>Issue__r.ExtractFromFeed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Sent</label>
    <type>Checkbox</type>
</CustomField>