force-app/main/default/objects/Attachment_Detail__c/fields/IssueID__c.field-meta.xml
<CustomField>
    <fullName>IssueID__c</fullName>
    <description>FeedOutbound - Issue ID.</description>
    <formula>Issue__r.CaseNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IssueID</label>
    <type>Text</type>
</CustomField>