force-app/main/default/objects/Attachment_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>AttachmentId__c</columns>
    <columns>Attachment_Name__c</columns>
    <columns>IsActive__c</columns>
    <columns>isReviewed__c</columns>
    <columns>FeedSend__c</columns>
    <columns>IssueID__c</columns>
    <columns>Issue_Sent__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Description__c</columns>
    <columns>DescriptionFeed__c</columns>
    <columns>File_Name__c</columns>
    <columns>File_Type__c</columns>
    <columns>Issue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>4/22/2025 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>